<resources>
    <string name="app_name">KitKare</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="tvMainWelcomeMessage">Welcome to KitKare</string>
    <string name="tvMainWelcomeText">Take care of your cat no matter where you are!</string>
    <string name="tvMainLogin">Login</string>
    <string name="tvMainRegister">Register</string>
    <string name="tvDashboard">Dashboard</string>
    <string name="tvFeed">Device</string>
    <string name="tvAboutUsTitle">About us</string>
    <string name="tvAboutUsContent">KitKare is a new way to take care of your cat from anywhere in the world.\n\n
        Supply your furry loved ones with food and water, switch on their lights, quickly get in touch with the vet check on them
        anytime anywhere and learn tips on how to take best care of them.</string>
    <string name="tvAboutUsFooter">Telerik Academy 2016: Android Application project</string>

    <string name="tvMainLabelEmail">Email</string>
    <string name="tvMainLabelPassword">Password</string>
    <string name="tvMainLabelConfirmPassword">Confirm Password</string>

    <string name="tvHasAccount">Already have an account?</string>
    <string name="tvDoesNotHaveAccount">Don\'t have an account yet?</string>

    <string name="btnMainLogin">Login</string>
    <string name="btnMainRegister">Register</string>
    <string name="btnDevice">Device</string>
    <string name="btnCamera">Camera</string>
    <string name="btnVet">Vet</string>
    <string name="action_logout">Logout</string>
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="action_home">Home</string>
    <string name="action_dashboard">Dashboard</string>
    <string name="btnCallVet">Call Vet</string>
    <string name="btnPickVet">Pick Number</string>
    <string name="tvNoVetNumberYet">No phone number picked yet!</string>
    <string name="btnEditVetNumber">Edit Number</string>
    <string name="btnDeleteVetNumber">Delete Number</string>
    <string name="hintCallBtn">Hold button to make a call.</string>
    <string name="tvVetTitle">Call the Vet</string>
    <string name="btnVetHistory">Vet History</string>
    <string name="app_notification">KitKare Reminder</string>
    <string name="reminder_notification_title">Miss your kitty?</string>
    <string name="reminder_notification_text">Head over to KitKare now!</string>
    <string name="action_notify">Notify</string>
    <string name="action_aboutus">About us</string>
    <string name="btnTips">Tips</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="tvAboutUs">About us</string>
    <string name="tvCatCareTipsTitle">Tips</string>
    <string name="btnFavorites">Favorites</string>
    <string name="tvFavoriteCatCareTipsTitle">Favorite Tips</string>
    <string name="noFavoritesYet">You don\'t have any favorites yet.</string>
    <string name="btnGiveFood">Give Food</string>
    <string name="btnGiveWater">Give Water</string>
    <string name="btnToggleLights">Toggle Lights</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="tvDeviceTitle">Device</string>
    <string name="btnTurnLightsOn">Switch on!</string>
    <string name="btnTurnLightsOff">Switch off!</string>
    <string name="btnFeedingHistory">Feeding History</string>
    <string name="tvVetHistoryTitle">Vet History</string>
    <string name="tvVetHistoryLastCall">Last call</string>
    <string name="tvNoVetHistoryYet">No history yet.</string>
    <string name="tvFeedingHistoryTitle">Feeding History</string>


</resources>
