<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.views.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:alpha="0.5"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:src="@drawable/back" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.9"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewLoginMsg"
                    style="@style/ActivityTitle"
                    android:text="@string/tvMainLogin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLoginEmail"
                    style="@style/AppEditTextLabel"
                    android:text="@string/tvMainLabelEmail" />

                <EditText
                    android:id="@+id/etLoginEmail"
                    style="@style/AppEditText"
                    android:hint="@string/tvMainLabelEmail"
                    android:inputType="textEmailAddress">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvLoginPassword"
                    style="@style/AppEditTextLabel"
                    android:text="@string/tvMainLabelPassword" />

                <EditText
                    android:id="@+id/etLoginPassword"
                    style="@style/AppEditText"
                    android:hint="@string/tvMainLabelPassword"
                    android:inputType="textPassword">

                    <requestFocus />
                </EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_buttons_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                tools:ignore="UselessParent">

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/AppButton"
                    android:text="@string/btnMainLogin" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDoesNotHaveAccount"
                    style="@style/AppEditTextLabel"
                    android:gravity="center"
                    android:text="@string/tvDoesNotHaveAccount" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/btnMainRegister"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>