<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kitkare.kitkare.app.activities.fragments.AboutUsFragment$PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAboutUsTitle"
                style="@style/ActivityTitle"
                android:layout_weight="1"
                android:text="@string/tvAboutUsTitle"/>

            <TextView
                android:id="@+id/textViewAboutUsContent"
                style="@style/AppText"
                android:layout_weight="2"
                android:layout_marginTop="10dp"
                android:text="@string/tvAboutUsContent"/>
            />

            <TextView
                android:id="@+id/textViewAboutUsFooter"
                style="@style/AppEditTextLabel"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:text="@string/tvAboutUsFooter"/>

            <TextView
                android:id="@+id/testText"
                style="@style/AppEditTextLabel"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:layout_marginTop="30dp"
                />

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
