<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBackground"
    tools:context=".app.activities.fragments.dashboard.DeviceFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:alpha="0.9"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDeviceTitle"
                style="@style/ActivityTitle"
                android:layout_weight="1"
                android:text="@string/tvDeviceTitle"
                android:textColor="@color/colorWhite" />

            <ImageView
                android:id="@+id/imageViewCatFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/catfood" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnGiveFood"
                        style="@style/AppButton"
                        android:layout_marginBottom="3dp"
                        android:layout_marginRight="1dp"
                        android:layout_weight="1"
                        android:text="@string/btnGiveFood" />

                    <Button
                        android:id="@+id/btnGiveWater"
                        style="@style/AppButton"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:text="@string/btnGiveWater" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <!--<Button-->
                    <!--android:id="@+id/btnToggleLights"-->
                    <!--style="@style/AppButton"-->
                    <!--android:layout_marginBottom="3dp"-->
                    <!--android:layout_weight="1"-->
                    <!--android:text="@string/btnToggleLights" />-->

                    <!--<Button-->
                    <!--android:id="@+id/btnToggleLightsOff"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@drawable/light_off" />-->

                    <!--<Button-->
                    <!--android:id="@+id/btnToggleLightsOn"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:src="@drawable/light_on" />-->
                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnToggleLightsOn"
                        style="@style/AppButton"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/light_on"
                        android:gravity="center_horizontal"
                        android:paddingTop="30dp"
                        android:text="@string/btnTurnLightsOff"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/btnToggleLightsOff"
                        style="@style/AppButton"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/light_off"
                        android:gravity="center_horizontal"
                        android:paddingTop="30dp"
                        android:text="@string/btnTurnLightsOn"
                        android:textColor="@color/colorAccent" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnFeedingHistory"
                    style="@style/AppButton"
                    android:text="@string/btnFeedingHistory" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
