<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".app.views.MainActivity$PlaceholderFragment">

    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_centerInParent="true"-->
        <!--android:alpha="0.5"-->
        <!--android:scaleType="fitCenter"-->
        <!--android:src="@drawable/back" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.9"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/ActivityTitle"
                android:id="@+id/tvMainRegister"
                android:text="@string/tvMainRegister" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/tvLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.6"
                android:gravity="fill"
                android:text="@string/tvMainLabelEmail"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:ems="10"
                android:hint="@string/tvMainLabelEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/darkGrey">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.6"
                android:gravity="fill"
                android:text="@string/tvMainLabelPassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etLoginPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:ems="10"
                android:hint="@string/tvMainLabelPassword"
                android:inputType="textPassword"
                android:textColor="@color/darkGrey">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/tvLoginConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.6"
                android:gravity="fill"
                android:text="@string/tvMainLabelConfirmPassword"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/etLoginConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:layout_weight="0.4"
                android:ems="10"
                android:hint="@string/tvMainLabelConfirmPassword"
                android:inputType="textPassword"
                android:textColor="@color/darkGrey">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_buttons_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnMainRegister"
                android:background="@color/colorAccent"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHasAccount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/tvHasAccount"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/btnMainLogin"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
